--- a/rastreamento/index.html
+++ b/rastreamento/index.html
@@ -11,13 +11,38 @@
     <h2>Rastreamento de Pedido</h2>
 </header>
 
+<main>
+  <label>Digite o seu CPF ou número do pedido:</label><br>
+  <input type="text" id="busca" placeholder="Ex: 12345678900 ou 000000">
+  <button onclick="buscar()">Buscar</button>
 
-<label>Digite o CPF ou Número do Pedido:</label><br>
-<input type="text" id="busca" placeholder="Ex: 12345678900 ou PED001">
-<button onclick="buscar()">Buscar</button>
-
-<div id="resultado"></div>
-<div id="rastreio"></div>
+  <div id="resultado"></div>
+  <div id="rastreio"></div>
+</main>
+<footer>
+  <table>
+    <tr>
+      <td class="links">
+        <a href="https://suporte.up.railway.app/">Fale Conosco</a>
+        <a href="https://www.buqcareoficial.com.br/politica-de-troca-e-devolucao/">Política de Troca e Devolução</a>
+      </td>
+    </tr>
+    <tr>
+      <td> </td>
+      <td><a href="https://www.buqcareoficial.com.br/politica-de-privacidade/">Política de Privacidade</a></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td> </td>
+      <td>suporte@buqcareoficial.com.br</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td>ROD BR 116 | Nº 2555 | MODU 17 | PARQUE IRACEMA 60.824-115 | FORTALEZA - CE</td>
+    </tr>
+  </table>
+  
+</footer>
 
 <script src="script/index.js"></script>
 
