--- a/rastreamento/index.html
+++ b/rastreamento/index.html
@@ -12,37 +12,45 @@
 </header>
 
 <main>
-  <label>Digite o seu CPF ou número do pedido:</label><br>
-  <input type="text" id="busca" placeholder="Ex: 12345678900 ou 000000">
-  <button onclick="buscar()">Buscar</button>
+  <div class="centro">
+    <label>Digite o seu CPF ou número do pedido:</label><br>
+    <input type="text" id="busca" placeholder="Ex: 12345678900 ou 000000">
+    <button onclick="buscar()">Buscar</button>
 
-  <div id="resultado"></div>
-  <div id="rastreio"></div>
-</main>
-<footer>
-  <table>
-    <tr>
-      <td class="links">
-        <a href="https://suporte.up.railway.app/">Fale Conosco</a>
-        <a href="https://www.buqcareoficial.com.br/politica-de-troca-e-devolucao/">Política de Troca e Devolução</a>
-      </td>
-    </tr>
-    <tr>
-      <td> </td>
-      <td><a href="https://www.buqcareoficial.com.br/politica-de-privacidade/">Política de Privacidade</a></td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td> </td>
-      <td>suporte@buqcareoficial.com.br</td>
-      <td> </td>
-    </tr>
-    <tr>
-      <td>ROD BR 116 | Nº 2555 | MODU 17 | PARQUE IRACEMA 60.824-115 | FORTALEZA - CE</td>
-    </tr>
-  </table>
+    <div id="resultado"></div>
+    <div id="rastreio"></div>
+  </div>
+
   
+</main>
+<footer class="rodape">
+  <div class="social">
+    <a href="https://www.instagram.com/usebuq/" target="_blank"><img src="https://img.icons8.com/ios-filled/20/ffffff/instagram-new.png" alt="Instagram"></a>
+  </div>
+
+  <nav class="menu-footer">
+    <a href="https://suporte.up.railway.app/">Fale Conosco</a>
+    <a href="https://www.buqcareoficial.com.br/politica-de-troca-e-devolucao/">Política de Troca e Devolução</a>
+    <a href="https://www.buqcareoficial.com.br/politica-de-privacidade/">Política de Privacidade</a>
+  </nav>
+
+  <div class="contato">
+    <p>
+      <img src="imagens/icons8-letter-48.png" alt="email"> 
+      suporte@buqcareoficial.com.br
+    </p>
+    <p>
+      <img src="https://img.icons8.com/ios-filled/16/ffffff/marker.png" alt="localização">
+      ROD BR 116 | Nº 2555 | MODU 17 | PARQUE IRACEMA 60.824-115 | FORTALEZA - CE
+    </p>
+  </div>
+
+  <div class="info-final">
+    <p>© Copyright BUQ CARE LTDA - 46.772.140/0014-6 - 2025</p>
+    <p>Todos os direitos reservados.</p>
+  </div>
 </footer>
+
 
 <script src="script/index.js"></script>
 <script src="script/nuvemshop.js"></script>
