--- a/rastreamento/index.html
+++ b/rastreamento/index.html
@@ -46,7 +46,7 @@
   </div>
 
   <div class="info-final">
-    <p>© Copyright BUQ CARE LTDA - 46.772.140/0014-6 - 2025</p>
+    <p>© Copyright BUQ CARE LTDA - 46.772.140/000146 - 2025</p>
     <p>Todos os direitos reservados.</p>
   </div>
 </footer>
