--- a/rastreamento/index.html
+++ b/rastreamento/index.html
@@ -25,7 +25,7 @@
 </main>
 <footer class="rodape">
   <div class="social">
-    <a href="https://www.instagram.com/usebuq/" target="_blank"><img src="https://img.icons8.com/ios-filled/20/ffffff/instagram-new.png" alt="Instagram"></a>
+    <a href="https://www.instagram.com/usebuq/" target="_blank"><img src="imagens/icons8-instagram-50.png" alt="Instagram"></a>
   </div>
 
   <nav class="menu-footer">
