--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Consulta de Rastreio</title>
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="imagens/IconWebpage.png">
 </head>
 <body>
 
@@ -20,9 +23,8 @@
     <div id="resultado"></div>
     <div id="rastreio"></div>
   </div>
-
-  
 </main>
+
 <footer class="rodape">
   <div class="social">
     <a href="https://www.instagram.com/usebuq/" target="_blank"><img src="imagens/icons8-instagram-50.png" alt="Instagram"></a>
@@ -51,8 +53,6 @@
   </div>
 </footer>
 
-
 <script src="script/index.js"></script>
 
-</body>
-</html>
+<
