--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,9 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Consulta de Rastreio</title>
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="imagens/IconWebpage.png">
 </head>
 <body>
 
@@ -27,7 +25,9 @@
 
 <footer class="rodape">
   <div class="social">
-    <a href="https://www.instagram.com/usebuq/" target="_blank"><img src="imagens/icons8-instagram-50.png" alt="Instagram"></a>
+    <a href="https://www.instagram.com/usebuq/" target="_blank">
+      <img src="imagens/icons8-instagram-50.png" alt="Instagram">
+    </a>
   </div>
 
   <nav class="menu-footer">
@@ -55,4 +55,5 @@
 
 <script src="script/index.js"></script>
 
-<
+</body>
+</html>
